# tree-bracket-representation

./: .gitignore  Makefile  README.md  go.mod  main.go  renovate.json  tree.go  tree_test.go
.github/workflows/: go.yml  main.yml
examples/: bracket-tree-invalid-cases.json  bracket-tree-valid-cases.json
go/: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  tree.go  tree_test.go
java/: .gitignore  README.md  pom.xml
java/src/com/github/urgas9/treebracketrepresentation/: BracketTree.java  Main.java  Node.java  ParseException.java
java/src/main/java/com/github/urgas9/treebracketrepresentation/: BracketTree.java  BracketTreeBuilder.java  BracketTreeParser.java  Node.java
java/src/test/java/: BracketTreeTests.java  TestCase.java
kotlin/: README.md  build.gradle  settings.gradle
kotlin/src/main/kotlin/: BracketTreeParser.kt  Node.kt
kotlin/src/test/kotlin/: BracketTreeTest.kt  TestCase.kt
python/: .gitignore  Makefile  README.md  setup.cfg  setup.py
python/brackettree/: parser.py  tree.py
python/brackettree/tests/: test_tree.py
rust/: Cargo.toml  Makefile  README.md
rust/src/: lib.rs  main.rs  tests.rs  tree.rs
