[package]
name = "rust"
version = "0.1.0"
authors = ["Gasper Urh <gasper.urh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"